# MiniParserVisualizer

./: .gitignore  CMakeLists.txt  README.md  build_my_project.sh  main.cpp
data/: file1.txt  file3.json
scripts/: plot.py  run_pipeline.sh
src/: Generator.cpp  Parser.cpp  Parser.hpp  Utils.hpp
tests/: ParserTests.cpp
